--- a/clase_3/index.html
+++ b/clase_3/index.html
@@ -17,6 +17,7 @@
             <p><a href="index.html">Hosting</a></p>
             <p><a href="#">Templates</a></p>
             <p><a href="#">Servidores</a></p>
+            <p><a href="#">Nada</a></p>
         </div>
 
     </nav>
