--- a/clase_3/templates.html
+++ b/clase_3/templates.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Templates</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Feel Good Inc.</title>
 </head>
 <body>
+  <nav>
+      <div class="brand">
+          <h1><a href="index.html">Feel Good Inc.</a></h1>
+      </div>
+      <div class="nav">
+          <p><a href="#">Dominios</a></p>
+          <p><a href="index.html">Hosting</a></p>
+          <p><a href="templates.html">Templates</a></p>
+          <p><a href="#">Servidores</a></p>
+      </div>
+
+  </nav>
 
 </body>
 </html>
